localize wallet group and type pages

--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -548,6 +548,7 @@
   "new_template": "Нов шаблон",
   "new_transactions_notifications": "Изпратете известия за нови транзакции",
   "new_wallet": "Нов портфейл",
+  "new_wallet_group": "Нова група портфейл",
   "newConnection": "Нова връзка",
   "no_cards_found": "Не са намерени карти",
   "no_extra_detail": "Няма налични допълнителни подробности",
@@ -794,6 +795,7 @@
   "select_a_wallet": "Изберете портфейл",
   "select_backup_file": "Избор на резервно копие",
   "select_buy_provider_notice": "Изберете доставчик на покупка по -горе. Можете да пропуснете този екран, като зададете вашия доставчик по подразбиране по подразбиране в настройките на приложението.",
+  "select_currency": "Изберете Валута",
   "select_destination": "Моля, изберете дестинация за архивния файл.",
   "select_hw_account_below": "Моля, изберете кой акаунт да възстановите по -долу:",
   "select_manufacturer_title": "Изберете производител",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "Безшумни плащания за сканиране",
   "silent_payments_settings": "Настройки за безшумни плащания",
   "single_seed_wallets_group": "Портфейли с единични семена",
+  "skip": "Пропускане",
   "slidable": "Плъзгащ се",
   "solana_create_associated_token_account_exception": "Грешка Създаване на свързана сметка за жетони за адреса на получател.",
   "solana_invalid_data_message": "Грешка при синтактичния анализ на свързания токен акаунт за токен. Моля, потвърдете адреса за получаване и опитайте отново.",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "Моля, изчакайте няколко секунди, докато транзакцията се отрази в историята на транзакциите",
   "wallet": "Портфейл",
   "wallet_group": "Група на портфейла",
+  "wallet_group_description_bottom_sheet": "В Cake Wallet можете да създадете група портфейли, като изберете съществуващ портфейл, с който да споделите семе. Всяка група портфейли може да съдържа един портфейл от всеки тип валута.\\n\\nМожете да изберете Избор на група портфейли, за да видите екрана с наличните портфейли и/или групи портфейли. Или изберете Създаване на ново семе, за да създадете портфейл с изцяло ново семе.",
   "wallet_group_description_existing_seed": "Вие сте избрали да използвате съществуващо семе за този портфейл. Можете да проверите отново семето, ако трябва да го потвърдите или запишете.",
   "wallet_group_description_four": "За да създадете портфейл с изцяло ново семе.",
   "wallet_group_description_one": "В портфейла за торта можете да създадете a",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "Винаги можете да видите това семе отново под",
   "wallet_group_empty_state_text_one": "Изглежда, че нямате съвместими групи портфейли !\n\n tap",
   "wallet_group_empty_state_text_two": "по -долу, за да се направи нов.",
+  "wallet_group_name": "Име на Wallet Group",
   "wallet_has_passphrase": "Този портфейл има парола",
   "wallet_keys": "Seed/keys на портфейла",
   "wallet_list_create_new_wallet": "Създаване на нов портфейл",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Monero портфейл",
   "walletConnect": "WalletConnect",
   "wallets": "Портфейли",
+  "want_to_create_more_wallets": "Искате ли да създадете повече портфейли за тази група портфейли? Чувствайте се свободни да го направите по-долу (или по всяко време по-късно на страницата Портфейли).",
   "warning": "Внимание",
   "website": "Уебсайт",
   "welcome": "Добре дошли",
   "welcome_subtitle_new_wallet": "Ако искате да стартирате свеж, докоснете Създайте нов портфейл по -долу и ще се откажете от състезанията.",
   "welcome_subtitle_restore_wallet": "Ако имате съществуващ портфейл, който искате да внесете в тортата, просто изберете възстановяване на съществуващия портфейл и ще ви преведем през процеса.",
   "welcome_to_cakepay": "Добре дошли в Cake Pay!",
+  "What_is_a_wallet_group": "Какво е група портфейли?",
   "what_is_payjoin": "Какво е Payjoin ?",
   "what_is_silent_payments": "Какво са мълчаливи плащания?",
   "widgets_address": "Адрес",
