--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -548,6 +548,7 @@
   "new_template": "Nová šablona",
   "new_transactions_notifications": "Zašlete oznámení o nových transakcích",
   "new_wallet": "Nová peněženka",
+  "new_wallet_group": "Nová skupina peněženek",
   "newConnection": "Nové připojení",
   "no_cards_found": "Žádné karty nenalezeny",
   "no_extra_detail": "K dispozici nejsou žádné další podrobnosti",
@@ -794,6 +795,7 @@
   "select_a_wallet": "Vyberte peněženku",
   "select_backup_file": "Vybrat soubor se zálohou",
   "select_buy_provider_notice": "Vyberte výše uvedeného poskytovatele nákupu. Tuto obrazovku můžete přeskočit nastavením výchozího poskytovatele nákupu v nastavení aplikace.",
+  "select_currency": "Vyberte možnost Měna",
   "select_destination": "Vyberte cíl pro záložní soubor.",
   "select_hw_account_below": "Níže vyberte, který účet chcete obnovit:",
   "select_manufacturer_title": "Vyberte výrobce",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "Skenování tichých plateb",
   "silent_payments_settings": "Nastavení tichých plateb",
   "single_seed_wallets_group": "Jednorázové peněženky",
+  "skip": "Přeskočit",
   "slidable": "Posuvné",
   "solana_create_associated_token_account_exception": "Vytvoření chyby přidruženého účtu tokenů pro adresu příjmu.",
   "solana_invalid_data_message": "Chyba při analýze přidruženého účtu tokenu pro token. Prosím potvrďte přijímací adresu a zkuste to znovu.",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "Počkejte několik sekund, než se transakce projeví v historii transakcí",
   "wallet": "Peněženka",
   "wallet_group": "Skupina peněženky",
+  "wallet_group_description_bottom_sheet": "V Cake Wallet můžete vytvořit skupinu peněženek výběrem existující peněženky, se kterou chcete sdílet seed. Každá skupina peněženek může obsahovat jednu peněženku každého typu měny.\\n\\nMůžete vybrat Vybrat skupinu peněženek a zobrazí se obrazovka dostupných peněženek a/nebo skupin peněženek. Nebo zvolte Create New Seed a vytvořte peněženku se zcela novým seedem.",
   "wallet_group_description_existing_seed": "Rozhodli jste se použít existující semeno pro tuto peněženku. Semeno můžete znovu ověřit, pokud potřebujete potvrdit nebo zapisovat.",
   "wallet_group_description_four": "Vytvoření peněženky s zcela novým semenem.",
   "wallet_group_description_one": "V peněžence dortu můžete vytvořit a",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "Toto semeno si můžete vždy znovu prohlédnout",
   "wallet_group_empty_state_text_one": "Vypadá to, že nemáte žádné kompatibilní skupiny peněženky !\n\n",
   "wallet_group_empty_state_text_two": "Níže vytvořit nový.",
+  "wallet_group_name": "Název skupiny peněženek",
   "wallet_has_passphrase": "Tato peněženka má přístupovou frázi",
   "wallet_keys": "Seed/klíče peněženky",
   "wallet_list_create_new_wallet": "Vytvořit novou peněženku",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Monero Wallet",
   "walletConnect": "WalletConnect",
   "wallets": "Peněženky",
+  "want_to_create_more_wallets": "Chcete pro tuto skupinu peněženek vytvořit další peněženky? Neváhejte tak učinit níže (nebo kdykoli později na stránce Peněženky).",
   "warning": "Varování",
   "website": "Web",
   "welcome": "Vítejte",
   "welcome_subtitle_new_wallet": "Pokud chcete začít čerstvě, klepněte na Vytvořit novou peněženku níže a budete na závodech.",
   "welcome_subtitle_restore_wallet": "Pokud máte existující peněženku, kterou chcete přinést do dortu, jednoduše si vyberte obnovení stávající peněženky a my vás projdeme procesem.",
   "welcome_to_cakepay": "Vítejte v Cake Pay!",
+  "What_is_a_wallet_group": "Co je to skupina peněženek?",
   "what_is_payjoin": "Co je Payjoin ?",
   "what_is_silent_payments": "Co jsou tiché platby?",
   "widgets_address": "Adresa",
