--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -548,6 +548,7 @@
   "new_template": "neue Vorlage",
   "new_transactions_notifications": "Senden Sie Benachrichtigungen über neue Transaktionen",
   "new_wallet": "Neue Wallet",
+  "new_wallet_group": "Neue Wallet-Gruppe",
   "newConnection": "Neue Verbindung",
   "no_cards_found": "Keine Karten gefunden",
   "no_extra_detail": "Keine zusätzlichen Details verfügbar",
@@ -795,6 +796,7 @@
   "select_a_wallet": "Wählen Sie eine Wallet",
   "select_backup_file": "Sicherungsdatei auswählen",
   "select_buy_provider_notice": "Wählen Sie oben einen Anbieter kaufen. Sie können diese Seite überspringen, indem Sie Ihren Standard-Kaufanbieter in den App-Einstellungen festlegen.",
+  "select_currency": "Wählen Sie Währung aus",
   "select_destination": "Bitte wählen Sie das Ziel für die Sicherungsdatei aus.",
   "select_hw_account_below": "Bitte wählen Sie unten, welches Konto unten wiederhergestellt werden soll:",
   "select_manufacturer_title": "Hersteller auswählen",
@@ -901,6 +903,7 @@
   "silent_payments_scanning": "Silent Payments scannen",
   "silent_payments_settings": "Einstellungen für Silent Payments",
   "single_seed_wallets_group": "Einzelne Wallets",
+  "skip": "Überspringen",
   "slidable": "Verschiebbar",
   "solana_create_associated_token_account_exception": "Fehler beim Erstellen des zugehörigen Token-Kontos für die Empfängeradresse.",
   "solana_invalid_data_message": "Fehler beim Parsen des zugeordneten Token-Kontos für Token. Bitte bestätigen Sie die Empfangsadresse und versuchen Sie es erneut.",
@@ -1095,6 +1098,7 @@
   "waiting_payment_confirmation": "Warte auf Zahlungsbestätigung",
   "wallet": "Geldbörse",
   "wallet_group": "Walletgruppe",
+  "wallet_group_description_bottom_sheet": "In Cake Wallet können Sie eine Wallet-Gruppe erstellen, indem Sie eine vorhandene Wallet auswählen, mit der Sie einen Seed teilen möchten. Jede Wallet-Gruppe kann ein einzelnes Wallet jedes Währungstyps enthalten.\\n\\nSie können „Wallet-Gruppe auswählen“ auswählen, um den Bildschirm mit den verfügbaren Wallets und/oder Wallet-Gruppen anzuzeigen. Oder wählen Sie „Neuen Seed erstellen“, um eine Wallet mit einem völlig neuen Seed zu erstellen.",
   "wallet_group_description_existing_seed": "Sie haben für diese Wallet einen vorhandenen Seed verwendet. Sie können den Seed erneut überprüfen, wenn Sie ihn bestätigen oder aufschreiben müssen.",
   "wallet_group_description_four": "eine Wallet mit einem völlig neuen Seed schaffen.",
   "wallet_group_description_one": "In Cake Wallet können Sie eine erstellen",
@@ -1104,6 +1108,7 @@
   "wallet_group_description_view_seed": "Sie können diesen Seed immer wieder untersuchen",
   "wallet_group_empty_state_text_one": "Sieht so aus, als hätten Sie keine kompatiblen Walletgruppen !\n\n TAP",
   "wallet_group_empty_state_text_two": "unten, um einen neuen zu machen.",
+  "wallet_group_name": "Name der Wallet-Gruppe",
   "wallet_has_passphrase": "Diese Wallet hat eine Passphrase",
   "wallet_keys": "Wallet-Seed/-Schlüssel",
   "wallet_list_create_new_wallet": "Neue Wallet erstellen",
@@ -1128,12 +1133,14 @@
   "wallet_store_monero_wallet": "Monero-Wallet",
   "walletConnect": "WalletConnect",
   "wallets": "Wallets",
+  "want_to_create_more_wallets": "Möchten Sie weitere Wallets für diese Wallet-Gruppe erstellen? Sie können dies gerne unten (oder jederzeit später auf der Seite „Geldbörsen“) tun.",
   "warning": "Warnung",
   "website": "Webseite",
   "welcome": "Willkommen",
   "welcome_subtitle_new_wallet": "Wenn Sie frisch anfangen möchten, tippen Sie unten neue Wallet und schon sind Sie bereit.",
   "welcome_subtitle_restore_wallet": "Wenn Sie über eine vorhandene Wallet verfügen, die Sie in Cake Wallet öffnen möchten, drücken Sie auf Vorhandene Wallet wiederherstellen und wir werden Sie durch den Prozess führen.",
   "welcome_to_cakepay": "Willkommen bei Cake Pay!",
+  "What_is_a_wallet_group": "Was ist eine Wallet-Gruppe?",
   "what_is_payjoin": "Was ist Payjoin ?",
   "what_is_silent_payments": "Was sind Silent Payments?",
   "widgets_address": "Adresse",
