--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -548,6 +548,7 @@
   "new_template": "New Template",
   "new_transactions_notifications": "Send notifications about new transactions",
   "new_wallet": "New Wallet",
+  "new_wallet_group": "New Wallet Group",
   "newConnection": "New Connection",
   "no_cards_found": "No cards found",
   "no_extra_detail": "No extra details available",
@@ -795,6 +796,7 @@
   "select_a_wallet": "Select a wallet",
   "select_backup_file": "Select backup file",
   "select_buy_provider_notice": "Select a buy provider above. You can skip this screen by setting your default buy provider in app settings.",
+  "select_currency": "Select Currency",
   "select_destination": "Please select destination for the backup file.",
   "select_hw_account_below": "Please select which account to restore below:",
   "select_manufacturer_title": "Select Manufacturer",
@@ -901,6 +903,7 @@
   "silent_payments_scanning": "Silent Payments Scanning",
   "silent_payments_settings": "Silent Payments settings",
   "single_seed_wallets_group": "Single Seed Wallets",
+  "skip": "Skip",
   "slidable": "Slidable",
   "solana_create_associated_token_account_exception": "Error creating associated token account for receipient address.",
   "solana_invalid_data_message": "Error parsing associated token account for token. Kindly confirm receive address and try again.",
@@ -1093,6 +1096,7 @@
   "waitFewSecondForTxUpdate": "Kindly wait for a few seconds for transaction to reflect in transactions history",
   "wallet": "Wallet",
   "wallet_group": "Wallet Group",
+  "wallet_group_description_bottom_sheet": "In Cake Wallet, you can create a wallet group by selecting an existing wallet to share a seed with. Each wallet group can contain a single wallet of each currency type.\\n\\nYou can select Choose Wallet Group to see the available wallets and/or wallet groups screen. Or choose Create New Seed to create a wallet with an entirely new seed.",
   "wallet_group_description_existing_seed": "You’ve chosen to use an existing seed for this wallet. You may verify the seed again if you need to confirm or write it down.",
   "wallet_group_description_four": "to create a wallet with an entirely new seed.",
   "wallet_group_description_one": "In Cake Wallet, you can create a",
@@ -1102,6 +1106,7 @@
   "wallet_group_description_view_seed": "You can always view this seed again under",
   "wallet_group_empty_state_text_one": "Looks like you don't have any compatible wallet groups!\n\nTap",
   "wallet_group_empty_state_text_two": "below to make a new one.",
+  "wallet_group_name": "Wallet Group name",
   "wallet_has_passphrase": "This wallet has a passphrase",
   "wallet_keys": "Wallet seed/keys",
   "wallet_list_create_new_wallet": "Create New Wallet",
@@ -1126,12 +1131,14 @@
   "wallet_store_monero_wallet": "Monero Wallet",
   "walletConnect": "WalletConnect",
   "wallets": "Wallets",
+  "want_to_create_more_wallets": "Want to create more wallets for this wallet group? Feel free to do so below (or anytime later in the Wallets page).",
   "warning": "Warning",
   "website": "Website",
   "welcome": "Welcome",
   "welcome_subtitle_new_wallet": "If you want to start fresh, tap Create New Wallet below and you'll be off to the races.",
   "welcome_subtitle_restore_wallet": "If you have an existing wallet you want to bring into Cake, simply choose Restore Existing Wallet and we'll walk you through the process.",
   "welcome_to_cakepay": "Welcome to Cake Pay!",
+  "What_is_a_wallet_group": "What is a wallet group?",
   "what_is_payjoin": "What is Payjoin?",
   "what_is_silent_payments": "What are Silent Payments?",
   "widgets_address": "Address",
