--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -548,6 +548,7 @@
   "new_template": "Nouveau Modèle",
   "new_transactions_notifications": "Envoyer des notifications sur les nouvelles transactions",
   "new_wallet": "Nouveau Portefeuille (Wallet)",
+  "new_wallet_group": "Nouveau groupe de portefeuilles",
   "newConnection": "Nouvelle connexion",
   "no_cards_found": "Pas de cartes trouvées",
   "no_extra_detail": "Aucun détail supplémentaire disponible",
@@ -794,6 +795,7 @@
   "select_a_wallet": "Sélectionnez un portefeuille",
   "select_backup_file": "Sélectionnez le fichier de sauvegarde",
   "select_buy_provider_notice": "Sélectionnez un fournisseur d'achat ci-dessus. Vous pouvez ignorer cet écran en définissant votre fournisseur d'achat par défaut dans les paramètres de l'application.",
+  "select_currency": "Sélectionnez la devise",
   "select_destination": "Veuillez sélectionner la destination du fichier de sauvegarde.",
   "select_hw_account_below": "Veuillez sélectionner le compte à restaurer ci-dessous:",
   "select_manufacturer_title": "Sélectionner le fabricant",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "Scan des paiements silencieux",
   "silent_payments_settings": "Paramètres de paiement silencieux",
   "single_seed_wallets_group": "Portefeuilles de mots-clés (seed) simples",
+  "skip": "Sauter",
   "slidable": "Glissable",
   "solana_create_associated_token_account_exception": "Création d'erreur Création de jetons associés pour l'adresse détenue.",
   "solana_invalid_data_message": "Erreur lors de l'analyse du compte de jeton associé pour le jeton. Veuillez confirmer l'adresse de réception et réessayer.",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "Veuillez attendre quelques secondes pour que la transaction soit reflétée dans l'historique des transactions.",
   "wallet": "Portefeuille",
   "wallet_group": "Groupe de portefeuille",
+  "wallet_group_description_bottom_sheet": "Dans Cake Wallet, vous pouvez créer un groupe de portefeuilles en sélectionnant un portefeuille existant avec lequel partager une graine. Chaque groupe de portefeuilles peut contenir un seul portefeuille de chaque type de devise.\\n\\nVous pouvez sélectionner Choisir un groupe de portefeuilles pour voir l'écran des portefeuilles et/ou des groupes de portefeuilles disponibles. Ou choisissez Créer une nouvelle graine pour créer un portefeuille avec une graine entièrement nouvelle.",
   "wallet_group_description_existing_seed": "Vous avez choisi d'utiliser une phrase mnémonique existante pour ce portefeuille. Vous pouvez la vérifier à nouveau si vous devez la confirmer ou la noter.",
   "wallet_group_description_four": "Pour créer un portefeuille avec une phrase mnémonique entièrement nouvelle.",
   "wallet_group_description_one": "Dans Cake Wallet, vous pouvez créer un",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "Vous pouvez toujours consulter cette phrase mnémonique à la rubrique",
   "wallet_group_empty_state_text_one": "On dirait que vous n'avez pas de groupes de portefeuilles compatibles !\n\nTap",
   "wallet_group_empty_state_text_two": "Ci-dessous pour en faire un nouveau.",
+  "wallet_group_name": "Nom du groupe de portefeuille",
   "wallet_has_passphrase": "Ce portefeuille a une phrase secrète",
   "wallet_keys": "Phrase secrète (seed)/Clefs du portefeuille (wallet)",
   "wallet_list_create_new_wallet": "Créer un Nouveau Portefeuille (Wallet)",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Portefeuille (Wallet) Monero",
   "walletConnect": "WalletConnect",
   "wallets": "Portefeuilles",
+  "want_to_create_more_wallets": "Vous souhaitez créer plus de portefeuilles pour ce groupe de portefeuilles ? N'hésitez pas à le faire ci-dessous (ou à tout moment plus tard sur la page Portefeuilles).",
   "warning": "Avertissement",
   "website": "Site web",
   "welcome": "Accueillir",
   "welcome_subtitle_new_wallet": "Si vous souhaitez repartir de zéro, appuyez sur Créer un nouveau portefeuille ci-dessous et vous serez prêt à commencer.",
   "welcome_subtitle_restore_wallet": "Si vous avez un portefeuille existant que vous souhaitez importer dans Cake, choisissez simplement Restaurer un portefeuille existant et nous vous guiderons à travers le processus.",
   "welcome_to_cakepay": "Bienvenue sur Cake Pay !",
+  "What_is_a_wallet_group": "Qu'est-ce qu'un groupe de portefeuilles ?",
   "what_is_payjoin": "Qu'est-ce que Payjoin ?",
   "what_is_silent_payments": "Qu'est-ce que les paiements silencieux ?",
   "widgets_address": "Adresse",
