--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -404,6 +404,7 @@
   "new_subaddress_title": "dirección pyahu",
   "new_template": "Plantilla pyahu",
   "new_wallet": "Billetera pyahu",
+  "new_wallet_group": "Grupo de billetera pyahu .",
   "newConnection": "Joaju pyahu",
   "no_cards_found": "Ndojejuhúi kuatiañe'ẽ",
   "no_id_needed": "Noñeikotevẽi ID",
@@ -606,6 +607,7 @@
   "seedtype_polyseed": "Polieta (16 ñe’ẽ)",
   "select_backup_file": "Eiporavo marandu ñongatupyre",
   "select_buy_provider_notice": "Eiporavo peteĩ jogua-me’ẽha yvategua. Ikatu rembohasa ko pantalla emoĩvo nde jogua-me’ẽha ñepyrũrãme ñembohekorã aplicación-rupive.",
+  "select_currency": "Eiporavo viru .",
   "select_destination": "Eiporavo moõpa oñeñongatúta marandurenda ñongatupyre.",
   "select_sell_provider_notice": "Eiporavo peteĩ ñemu-me’ẽha yvategua. Ikatu rembohasa ko jehechaha emoĩvo nde ñemu-me’ẽha ñepyrũrãme ñembohekorã aplicación-rupive.",
   "sell": "Ñemu",
@@ -690,6 +692,7 @@
   "silent_payments_scanned_tip": "Ojeescanea pe ipahaite peve! (${tip})",
   "silent_payments_scanning": "Reescanea hepyme’ẽ kirirĩme",
   "silent_payments_settings": "Ñemohenda hepyme’ẽ kirirĩme rehegua",
+  "skip": "Jepopo",
   "slidable": "Ikatúva osyry",
   "solana_invalid_data_message": "Error Parsing Asociado Cuenta de Token para Token. Amablemente emoañete recibir dirección ha eñeha'ã jey.",
   "sort_by": "Ñemohenda pe",
@@ -849,6 +852,8 @@
   "view_transaction_on": "Ehecha transacción rehegua",
   "voting_weight": "pe voto pohyikue",
   "waitFewSecondForTxUpdate": "Eha’ãro aravo’ive pe transacción ohechauka hag̃ua ñembohasa rembiasakué-pe.",
+  "wallet_group_description_bottom_sheet": "Pe billetera de torta-pe, ikatu ojejapo peteĩ grupo de billetera reiporavóramo peteĩ billetera oĩmava rekomparti hag̃ua peteĩ semilla. Káda grúpo de billetera ikatu oreko peteĩ billetera peteĩteĩva tipo de moneda rehegua.\\n\\n ikatu reiporavo Group de billetera rehecha hag̃ua pantalla ojeguerekóva umi billetera ha/térã billetera grupos. Térã eiporavo Emoheñói semilla pyahu ejapo hag̃ua peteĩ billetera peteĩ semilla pyahu enteramente reheve.",
+  "wallet_group_name": "Grupo de billetera réra .",
   "wallet_keys": "Billetera ñe’ẽ ñemi /papapy",
   "wallet_list_create_new_wallet": "Emoheñoi billetera pyahu",
   "wallet_list_edit_wallet": "Emohenda jey nde billetera",
@@ -871,9 +876,11 @@
   "wallet_store_monero_wallet": "Billetera Monero-rehegua",
   "walletConnect": "billetera joaju",
   "wallets": "Billetera-kuera",
+  "want_to_create_more_wallets": "¿Remoheñóise hetave billetera ko grupo de billetera-pe guarã? Eñeñandu porãke ejapo hag̃ua upéva koʼápe (térã oimeraẽ tiémpo rire pe páhina de billetera-pe).",
   "warning": "Ñemoarandu",
   "welcome": "Tapeguahẽporãite",
   "welcome_to_cakepay": "Tapeguahẽporãite Cake jehepyme’ẽ-me",
+  "What_is_a_wallet_group": "Mba’épa peteĩ grupo de billetera?",
   "what_is_silent_payments": "¿Mbaʼépa heʼise jehepymeʼẽ kirirĩme-gua?",
   "widgets_address": "Dirección",
   "widgets_or": "terã",
