--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -548,6 +548,7 @@
   "new_template": "Sabon Samfura",
   "new_transactions_notifications": "Aika sanarwa game da sababbin ma'amaloli",
   "new_wallet": "Sabuwar Wallet",
+  "new_wallet_group": "Sabuwar Wallet kungiyar",
   "newConnection": "Sabuwar Haɗi",
   "no_cards_found": "Babu katunan da aka samo",
   "no_extra_detail": "Babu ƙarin cikakkun bayanai",
@@ -796,6 +797,7 @@
   "select_a_wallet": "Zaɓi Wallet",
   "select_backup_file": "Zaɓi fayil ɗin madadin",
   "select_buy_provider_notice": "Zaɓi mai ba da kyauta a sama. Zaka iya tsallake wannan allon ta hanyar saita mai ba da isasshen busasshen mai ba da isasshen busasshiyar saiti.",
+  "select_currency": "Zaɓi Kudin",
   "select_destination": "Da fatan za a zaɓi wurin da za a yi wa madadin fayil ɗin.",
   "select_hw_account_below": "Da fatan za a zabi wanda asusun zai gyara a ƙasa:",
   "select_manufacturer_title": "Select Manaser",
@@ -902,6 +904,7 @@
   "silent_payments_scanning": "Silent biya scanning",
   "silent_payments_settings": "Saitunan Silent",
   "single_seed_wallets_group": "Guaro",
+  "skip": "Ƙetare",
   "slidable": "Mai iya zamewa",
   "solana_create_associated_token_account_exception": "Kuskuren ƙirƙirar asusun Asusun da aka danganta don Adireshin karɓar karɓa.",
   "solana_invalid_data_message": "Kuskuren hade da asusun ajiyar banki don alama. Da fatan za a tabbatar da adireshin da sake gwadawa.",
@@ -1094,6 +1097,7 @@
   "waitFewSecondForTxUpdate": "Da fatan za a jira ƴan daƙiƙa don ciniki don yin tunani a tarihin ma'amala",
   "wallet": "Zabira",
   "wallet_group": "Wallet kungiyar",
+  "wallet_group_description_bottom_sheet": "A cikin Wallet Cake, zaka iya ƙirƙirar ƙungiyar walat ta zaɓi walat ɗin da ke ciki don raba iri tare da. Kowace kungiyar walat din na iya ƙunsar watsarin kowane nau'in kuɗi Ko zaɓi ƙirƙirar sabon iri don ƙirƙirar walat tare da sabon iri.",
   "wallet_group_description_existing_seed": "Kun zaɓi yin amfani da iri ɗaya na data kasance don wannan Wallet.you na iya tabbatar da zuriyar kuma idan kuna buƙatar tabbatarwa ko rubuta shi.",
   "wallet_group_description_four": "Don ƙirƙirar walat tare da sabon iri.",
   "wallet_group_description_one": "A cikin walat walat, zaka iya ƙirƙirar",
@@ -1103,6 +1107,7 @@
   "wallet_group_description_view_seed": "Koyaushe zaka iya duba wannan zuriya",
   "wallet_group_empty_state_text_one": "Kamar dai ba ku da wata ƙungiya matattara !\n\n Taɓa",
   "wallet_group_empty_state_text_two": "da ke ƙasa don yin sabo.",
+  "wallet_group_name": "Sunan Walletungiyar Wallet",
   "wallet_has_passphrase": "Wannan walat ɗin yana da kalmar wucewa",
   "wallet_keys": "Iri/maɓalli na walat",
   "wallet_list_create_new_wallet": "Ƙirƙiri Sabon Wallet",
@@ -1127,6 +1132,7 @@
   "wallet_store_monero_wallet": "Monero walat",
   "walletConnect": "WalletConnect",
   "wallets": "Wallets",
+  "want_to_create_more_wallets": "Kuna son ƙirƙirar WALLS don wannan rukunin walat? Jin kyauta don yin hakan a ƙasa (ko kowane lokaci daga cikin shafin Wallets).",
   "warning": "Gargadi",
   "website": "Gidan yanar gizo",
   "welcome": "Barka da zuwa",
@@ -1134,6 +1140,7 @@
   "welcome_subtitle_new_wallet": "Idan kana son farawa sabo ne, matsa Newirƙiri Sabuwar Wallow a ƙasa kuma za ka tafi da tsere.",
   "welcome_subtitle_restore_wallet": "Idan kuna da walat ɗin da kuke son shigo da cake, kawai zaɓi a cikin walat ɗin da yake ciki kuma za mu bi ku ta hanyar aiwatarwa.",
   "welcome_to_cakepay": "Barka da zuwa Cake Pay!",
+  "What_is_a_wallet_group": "Menene rukunin walat?",
   "what_is_payjoin": "Mene ne Payjoin ?",
   "what_is_silent_payments": "Menene biyan shiru?",
   "widgets_address": "Adireshin",
