--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -548,6 +548,7 @@
   "new_template": "नया टेम्पलेट",
   "new_transactions_notifications": "नए लेनदेन के बारे में सूचनाएं भेजें",
   "new_wallet": "नया बटुआ",
+  "new_wallet_group": "न्यू वॉलेट ग्रुप",
   "newConnection": "नया कनेक्शन",
   "no_cards_found": "कोई कार्ड नहीं मिला",
   "no_extra_detail": "कोई अतिरिक्त विवरण उपलब्ध नहीं है",
@@ -616,8 +617,8 @@
   "payjoin_unavailable_sheet_title": "Payjoin अनुपलब्ध क्यों है?",
   "payment_id": "भुगतान ID: ",
   "payment_made_easy": "भुगतान आसान किया गया",
-  "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
   "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
+  "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
   "payments": "भुगतान",
   "pending": " (अपूर्ण)",
   "percentageOf": "${amount} का",
@@ -796,6 +797,7 @@
   "select_a_wallet": "एक वॉलेट का चयन करें",
   "select_backup_file": "बैकअप फ़ाइल का चयन करें",
   "select_buy_provider_notice": "ऊपर एक खरीद प्रदाता का चयन करें। आप इस स्क्रीन को ऐप सेटिंग्स में अपना डिफ़ॉल्ट बाय प्रदाता सेट करके छोड़ सकते हैं।",
+  "select_currency": "मुद्रा चुनें",
   "select_destination": "कृपया बैकअप फ़ाइल के लिए गंतव्य का चयन करें।",
   "select_hw_account_below": "कृपया नीचे पुनर्स्थापित करने के लिए कौन सा खाता चुनें:",
   "select_manufacturer_title": "निर्माता का चयन करें",
@@ -902,6 +904,7 @@
   "silent_payments_scanning": "मूक भुगतान स्कैनिंग",
   "silent_payments_settings": "मूक भुगतान सेटिंग्स",
   "single_seed_wallets_group": "एकल बीज बटुए",
+  "skip": "छोडना",
   "slidable": "फिसलने लायक",
   "solana_create_associated_token_account_exception": "रसीद पते के लिए संबद्ध टोकन खाता बनाने में त्रुटि।",
   "solana_invalid_data_message": "टोकन के लिए संबद्ध टोकन खाते को पार्स करने में त्रुटि। कृपया प्राप्त पते की पुष्टि करें और पुनः प्रयास करें।",
@@ -1094,6 +1097,7 @@
   "waitFewSecondForTxUpdate": "लेन-देन इतिहास में लेन-देन प्रतिबिंबित होने के लिए कृपया कुछ सेकंड प्रतीक्षा करें",
   "wallet": "बटुआ",
   "wallet_group": "बटुए समूह",
+  "wallet_group_description_bottom_sheet": "केक वॉलेट में, आप बीज साझा करने के लिए मौजूदा वॉलेट का चयन करके एक वॉलेट समूह बना सकते हैं। प्रत्येक वॉलेट समूह में प्रत्येक मुद्रा प्रकार का एक वॉलेट हो सकता है।\\n\\nउपलब्ध वॉलेट और/या वॉलेट समूह स्क्रीन देखने के लिए आप वॉलेट समूह चुनें का चयन कर सकते हैं। या पूरी तरह से नए बीज के साथ एक वॉलेट बनाने के लिए नया बीज बनाएं चुनें।",
   "wallet_group_description_existing_seed": "आपने इस वॉलेट के लिए एक मौजूदा बीज का उपयोग करने के लिए चुना है। यदि आपको इसकी पुष्टि करने या लिखने की आवश्यकता है, तो आप फिर से बीज को सत्यापित कर सकते हैं।",
   "wallet_group_description_four": "एक पूरी तरह से नए बीज के साथ एक बटुआ बनाने के लिए।",
   "wallet_group_description_one": "केक बटुए में, आप एक बना सकते हैं",
@@ -1103,6 +1107,7 @@
   "wallet_group_description_view_seed": "आप हमेशा इस बीज को फिर से देख सकते हैं",
   "wallet_group_empty_state_text_one": "लगता है कि आपके पास कोई संगत बटुआ समूह नहीं है!\n\nनल",
   "wallet_group_empty_state_text_two": "नीचे एक नया बनाने के लिए।",
+  "wallet_group_name": "वॉलेट समूह का नाम",
   "wallet_has_passphrase": "इस बटुए में एक पासफ़्रेज़ है",
   "wallet_keys": "बटुआ बीज / चाबियाँ",
   "wallet_list_create_new_wallet": "नया बटुआ बनाएँ",
@@ -1127,12 +1132,14 @@
   "wallet_store_monero_wallet": "मोनरो वॉलेट",
   "walletConnect": "वॉलेटकनेक्ट",
   "wallets": "पर्स",
+  "want_to_create_more_wallets": "क्या आप इस वॉलेट समूह के लिए और अधिक वॉलेट बनाना चाहते हैं? नीचे (या बाद में कभी भी वॉलेट पेज पर) ऐसा करने के लिए स्वतंत्र महसूस करें।",
   "warning": "चेतावनी",
   "website": "वेबसाइट",
   "welcome": "स्वागत",
   "welcome_subtitle_new_wallet": "यदि आप ताजा शुरू करना चाहते हैं, तो नीचे नया बटुआ बनाएं और आप दौड़ से दूर हो जाएंगे।",
   "welcome_subtitle_restore_wallet": "यदि आपके पास एक मौजूदा बटुआ है जिसे आप केक में लाना चाहते हैं, तो बस मौजूदा बटुए को पुनर्स्थापित करें और हम आपको प्रक्रिया के माध्यम से चलेंगे।",
   "welcome_to_cakepay": "केकपे में आपका स्वागत है!",
+  "What_is_a_wallet_group": "वॉलेट समूह क्या है?",
   "what_is_payjoin": "Payjoin ##### क्या है",
   "what_is_silent_payments": "मूक भुगतान क्या है?",
   "widgets_address": "पता",
