--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -548,6 +548,7 @@
   "new_template": "novi predložak",
   "new_transactions_notifications": "Pošaljite obavijesti o novim transakcijama",
   "new_wallet": "Novi novčanik",
+  "new_wallet_group": "Nova grupa novčanika",
   "newConnection": "Nova veza",
   "no_cards_found": "Nisu pronađene kartice",
   "no_extra_detail": "Nema dostupnih dodatnih detalja",
@@ -794,6 +795,7 @@
   "select_a_wallet": "Odaberite novčanik",
   "select_backup_file": "Odaberite datoteku sigurnosne kopije",
   "select_buy_provider_notice": "Odaberite gornji davatelj kupnje. Ovaj zaslon možete preskočiti postavljanjem zadanog davatelja usluga kupnje u postavkama aplikacija.",
+  "select_currency": "Odaberite Valutu",
   "select_destination": "Odaberite odredište za datoteku sigurnosne kopije.",
   "select_hw_account_below": "Molimo odaberite koji će se račun vratiti u nastavku:",
   "select_manufacturer_title": "Odaberite proizvođača",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "Skeniranje tihih plaćanja",
   "silent_payments_settings": "Postavke tihih plaćanja",
   "single_seed_wallets_group": "Jednostruki novčanici",
+  "skip": "Preskočiti",
   "slidable": "Klizna",
   "solana_create_associated_token_account_exception": "Pogreška u stvaranju povezanog token računa za adresu primanja.",
   "solana_invalid_data_message": "Pogreška pri raščlanjivanju povezanog računa tokena za token. Molimo potvrdite adresu primanja i pokušajte ponovo.",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "Pričekajte nekoliko sekundi da se transakcija prikaže u povijesti transakcija",
   "wallet": "Novčanik",
   "wallet_group": "Skupina novčanika",
+  "wallet_group_description_bottom_sheet": "U Cake Walletu možete stvoriti grupu novčanika odabirom postojećeg novčanika s kojim želite podijeliti sjeme. Svaka grupa novčanika može sadržavati jedan novčanik svake vrste valute.\\n\\nMožete odabrati Odaberi grupu novčanika da vidite ekran dostupnih novčanika i/ili grupa novčanika. Ili odaberite Create New Seed za stvaranje novčanika s potpuno novim seedom.",
   "wallet_group_description_existing_seed": "Odlučili ste koristiti postojeće sjeme za ovaj novčanik. Možete ponovno provjeriti sjeme ako ga trebate potvrditi ili zapisati.",
   "wallet_group_description_four": "Da biste stvorili novčanik s potpuno novim sjemenom.",
   "wallet_group_description_one": "U novčaniku kolača možete stvoriti a",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "Uvijek možete ponovo pogledati ovo sjeme ispod",
   "wallet_group_empty_state_text_one": "Izgleda da nemate nikakve kompatibilne grupe novčanika !\n\n",
   "wallet_group_empty_state_text_two": "Ispod da napravite novi.",
+  "wallet_group_name": "Naziv grupe novčanika",
   "wallet_has_passphrase": "Ovaj novčanik ima prolaznu frazu",
   "wallet_keys": "Pristupni izraz/ključ novčanika",
   "wallet_list_create_new_wallet": "Izradi novi novčanik",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Monero novčanik",
   "walletConnect": "WalletConnect",
   "wallets": "Novčanici",
+  "want_to_create_more_wallets": "Želite li stvoriti više novčanika za ovu grupu novčanika? Slobodno to učinite u nastavku (ili bilo kada kasnije na stranici Novčanici).",
   "warning": "Upozorenje",
   "website": "Web stranica",
   "welcome": "Dobrodošli",
   "welcome_subtitle_new_wallet": "Ako želite započeti svježe, dodirnite Create New Wallet u nastavku i krenite na utrke.",
   "welcome_subtitle_restore_wallet": "Ako imate postojeći novčanik koji želite unijeti u tortu, jednostavno odaberite Vratite postojeći novčanik i prošetat ćemo vas kroz postupak.",
   "welcome_to_cakepay": "Dobro došli u Cake Pay!",
+  "What_is_a_wallet_group": "Što je grupa novčanika?",
   "what_is_payjoin": "Što je Payjoin ?",
   "what_is_silent_payments": "Što je tiha plaćanja?",
   "widgets_address": "Adresa",
