--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -548,6 +548,7 @@
   "new_template": "Nuovo modello",
   "new_transactions_notifications": "Invia notifiche su nuove transazioni",
   "new_wallet": "Nuovo portafoglio",
+  "new_wallet_group": "Nuovo gruppo di portafogli",
   "newConnection": "Nuova connessione",
   "no_cards_found": "Nessuna carta trovata",
   "no_extra_detail": "Nessun dettaglio extra disponibile",
@@ -795,6 +796,7 @@
   "select_a_wallet": "Seleziona un portafoglio",
   "select_backup_file": "Seleziona file di backup",
   "select_buy_provider_notice": "Seleziona un provider di acquisto sopra. È possibile saltare questa schermata impostando il provider di acquisto predefinito nelle impostazioni dell'app.",
+  "select_currency": "Seleziona Valuta",
   "select_destination": "Seleziona la destinazione per il file di backup.",
   "select_hw_account_below": "Seleziona quale account ripristinare:",
   "select_manufacturer_title": "Seleziona il produttore",
@@ -901,6 +903,7 @@
   "silent_payments_scanning": "Scansione Silent Payments",
   "silent_payments_settings": "Impostazioni Silent Payments",
   "single_seed_wallets_group": "Portafogli singoli",
+  "skip": "Saltare",
   "slidable": "Scorrevole",
   "solana_create_associated_token_account_exception": "Errore nella creazione di un account token associato per l'indirizzo destinatario.",
   "solana_invalid_data_message": "Errore durante l'analisi dell'account token associato per il token. Si prega di confermare la ricezione dell'indirizzo e riprovare.",
@@ -1094,6 +1097,7 @@
   "waiting_payment_confirmation": "In attesa di conferma del pagamento",
   "wallet": "Portafoglio",
   "wallet_group": "Gruppo di portafoglio",
+  "wallet_group_description_bottom_sheet": "In Cake Wallet, puoi creare un gruppo di portafogli selezionando un portafoglio esistente con cui condividere un seed. Ogni gruppo di portafogli può contenere un singolo portafoglio di ciascun tipo di valuta.\\n\\nPuoi selezionare Scegli gruppo di portafogli per visualizzare la schermata dei portafogli e/o dei gruppi di portafogli disponibili. Oppure scegli Crea nuovo seme per creare un portafoglio con un seme completamente nuovo.",
   "wallet_group_description_existing_seed": "Hai scelto di utilizzare un seme esistente per questo portafoglio. Puoi verificare di nuovo il seme se devi confermarlo o scriverlo.",
   "wallet_group_description_four": "per creare un portafoglio con un seme completamente nuovo.",
   "wallet_group_description_one": "Su Cake Wallet, puoi creare un",
@@ -1103,6 +1107,7 @@
   "wallet_group_description_view_seed": "Puoi sempre visualizzare di nuovo questo seme sotto",
   "wallet_group_empty_state_text_one": "Sembra che tu non abbia alcun gruppo di portafoglio compatibile!\n\nPremi",
   "wallet_group_empty_state_text_two": "Di seguito per crearne uno nuovo.",
+  "wallet_group_name": "Nome del gruppo Portafoglio",
   "wallet_has_passphrase": "Questo portafoglio ha una passphrase",
   "wallet_keys": "Seme Portafoglio /chiavi",
   "wallet_list_create_new_wallet": "Crea Nuovo Portafoglio",
@@ -1127,6 +1132,7 @@
   "wallet_store_monero_wallet": "Portafoglio Monero",
   "walletConnect": "WalletConnect",
   "wallets": "Portafogli",
+  "want_to_create_more_wallets": "Vuoi creare più portafogli per questo gruppo di portafogli? Sentiti libero di farlo qui sotto (o in qualsiasi momento più tardi nella pagina Portafogli).",
   "warning": "Attenzione",
   "website": "Sito web",
   "welcome": "Benvenuto",
@@ -1134,6 +1140,7 @@
   "welcome_subtitle_new_wallet": "Se vuoi ricominciare da capo, premi Crea un nuovo portafoglio qui sotto.",
   "welcome_subtitle_restore_wallet": "Se hai un portafoglio esistente che vuoi importare in Cake Wallet, scegli semplicemente il ripristino del portafoglio esistente e ti guideremo attraverso il processo.",
   "welcome_to_cakepay": "Benvenuto in Cake Pay!",
+  "What_is_a_wallet_group": "Cos'è un gruppo di portafogli?",
   "what_is_payjoin": "Cos'è PayJoin ?",
   "what_is_silent_payments": "Che cos'è Silent Payments?",
   "widgets_address": "Indirizzo",
