--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -548,6 +548,7 @@
   "new_template": "새 템플릿",
   "new_transactions_notifications": "새 트랜잭션 알림 보내기",
   "new_wallet": "새 지갑",
+  "new_wallet_group": "새로운 지갑 그룹",
   "newConnection": "새 연결",
   "no_cards_found": "카드를 찾을 수 없습니다",
   "no_extra_detail": "추가 세부 정보 없음",
@@ -795,6 +796,7 @@
   "select_a_wallet": "지갑을 선택하십시오",
   "select_backup_file": "백업 파일 선택",
   "select_buy_provider_notice": "위에서 구매 제공 업체를 선택하세요. 앱 설정에서 기본 구매 제공 업체를 설정하여 이 화면을 건너뛸 수 있습니다.",
+  "select_currency": "통화 선택",
   "select_destination": "백업 파일의 대상을 선택하세요.",
   "select_hw_account_below": "아래에서 복구할 계정을 선택하세요:",
   "select_manufacturer_title": "제조업체를 선택하십시오",
@@ -901,6 +903,7 @@
   "silent_payments_scanning": "사일런트 페이먼트 스캔 중",
   "silent_payments_settings": "사일런트 페이먼트 설정",
   "single_seed_wallets_group": "단일 시드 지갑",
+  "skip": "건너뛰다",
   "slidable": "슬라이드 가능",
   "solana_create_associated_token_account_exception": "수신자 주소에 대한 연관 토큰 계정 생성 오류.",
   "solana_invalid_data_message": "토큰에 연결된 토큰 계정을 구문 분석하는 중에 오류가 발생했습니다. 수신 주소를 확인하신 후 다시 시도해 주세요.",
@@ -1093,6 +1096,7 @@
   "waitFewSecondForTxUpdate": "트랜잭션이 트랜잭션 내역에 반영될 때까지 몇 초간 기다려 주십시오",
   "wallet": "지갑",
   "wallet_group": "지갑 그룹",
+  "wallet_group_description_bottom_sheet": "Cake Wallet에서는 시드를 공유할 기존 지갑을 선택하여 지갑 그룹을 생성할 수 있습니다. 각 지갑 그룹에는 각 통화 유형의 단일 지갑이 포함될 수 있습니다.\\n\\n지갑 그룹 선택을 선택하여 사용 가능한 지갑 및/또는 지갑 그룹 화면을 볼 수 있습니다. 또는 새 시드 생성을 선택하여 완전히 새로운 시드가 포함된 지갑을 생성하세요.",
   "wallet_group_description_existing_seed": "이 지갑에 기존 시드를 사용하도록 선택했습니다. 확인하거나 적어두어야 하는 경우 시드를 다시 확인할 수 있습니다.",
   "wallet_group_description_four": "완전히 새로운 시드로 지갑을 생성합니다.",
   "wallet_group_description_one": "Cake Wallet에서는 다음을 생성할 수 있습니다",
@@ -1102,6 +1106,7 @@
   "wallet_group_description_view_seed": "다음에서 이 시드를 항상 다시 볼 수 있습니다",
   "wallet_group_empty_state_text_one": "호환되는 지갑 그룹이 없는 것 같습니다!\n\n탭",
   "wallet_group_empty_state_text_two": "아래에서 새 그룹을 만듭니다.",
+  "wallet_group_name": "월렛 그룹 이름",
   "wallet_has_passphrase": "이 지갑에는 암호 구문이 있습니다",
   "wallet_keys": "지갑 시드/키",
   "wallet_list_create_new_wallet": "새 지갑 생성",
@@ -1126,12 +1131,14 @@
   "wallet_store_monero_wallet": "모네로 지갑",
   "walletConnect": "WalletConnect",
   "wallets": "지갑",
+  "want_to_create_more_wallets": "이 지갑 그룹에 대해 더 많은 지갑을 만들고 싶으십니까? 아래에서 자유롭게 수행하십시오(또는 나중에 지갑 페이지에서 언제든지).",
   "warning": "경고",
   "website": "웹 사이트",
   "welcome": "환영",
   "welcome_subtitle_new_wallet": "새로 시작하려면 아래의 새 지갑 생성을 탭하면 바로 시작할 수 있습니다.",
   "welcome_subtitle_restore_wallet": "Cake로 가져오려는 기존 지갑이 있는 경우 기존 지갑 복구를 선택하면 과정을 안내해 드립니다.",
   "welcome_to_cakepay": "Cake Pay에 오신 것을 환영합니다!",
+  "What_is_a_wallet_group": "지갑 그룹이란 무엇입니까?",
   "what_is_payjoin": "Payjoin ?이란?",
   "what_is_silent_payments": "사일런트 페이먼트란 무엇인가요?",
   "widgets_address": "주소",
