--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -548,6 +548,7 @@
   "new_template": "ပုံစံအသစ်",
   "new_transactions_notifications": "အသစ်သောအရောင်းအဝယ်အကြောင်းသတိပေးချက်များပေးပို့ပါ",
   "new_wallet": "ပိုက်ဆံအိတ်အသစ်",
+  "new_wallet_group": "Walloet Group အသစ်",
   "newConnection": "ချိတ်ဆက်မှုအသစ်",
   "no_cards_found": "ကဒ်များမရှိပါ",
   "no_extra_detail": "အဘယ်သူမျှမအပိုအသေးစိတ်ကိုရရှိနိုင်",
@@ -794,6 +795,7 @@
   "select_a_wallet": "ပိုက်ဆံအိတ်တစ်ခုရွေးပါ",
   "select_backup_file": "အရန်ဖိုင်ကို ရွေးပါ။",
   "select_buy_provider_notice": "အပေါ်ကဝယ်သူတစ် ဦး ကိုရွေးချယ်ပါ။ သင်၏ default 0 ယ်သူအား app settings တွင် setting လုပ်ခြင်းဖြင့်ဤ screen ကိုကျော်သွားနိုင်သည်။",
+  "select_currency": "ငွေကြေးကိုရွေးချယ်ပါ",
   "select_destination": "အရန်ဖိုင်အတွက် ဦးတည်ရာကို ရွေးပါ။",
   "select_hw_account_below": "အောက်ဖော်ပြပါမည်သည့်အကောင့်ကိုရွေးပါ။",
   "select_manufacturer_title": "ထုတ်လုပ်သူကိုရွေးချယ်ပါ",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "အသံတိတ်ငွေပေးချေမှု scanning",
   "silent_payments_settings": "အသံတိတ်ငွေပေးချေမှုဆက်တင်များ",
   "single_seed_wallets_group": "တစ်ခုတည်းမျိုးစေ့ပိုက်ဆံအိတ်",
+  "skip": "ကြိုးခုန်",
   "slidable": "လျှောချနိုင်သည်။",
   "solana_create_associated_token_account_exception": "Encipient Token အကောင့်ကိုလက်ခံသည့်လိပ်စာအတွက်အကောင့်များဖန်တီးခြင်းအတွက်အမှားအယွင်းများဖန်တီးခြင်း။",
   "solana_invalid_data_message": "Token အတွက် Associated Token အကောင့်ကိုခွဲခြမ်းစိတ်ဖြာခြင်းအမှား။ ကြင်နာစွာလိပ်စာလက်ခံရရှိပြီးထပ်ကြိုးစားပါ။",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "ငွေပေးငွေယူ မှတ်တမ်းတွင် ရောင်ပြန်ဟပ်ရန် စက္ကန့်အနည်းငယ်စောင့်ပါ။",
   "wallet": "ပိုက်ဆံအိတ်",
   "wallet_group": "ပိုက်ဆံအိတ်အုပ်စု",
+  "wallet_group_description_bottom_sheet": "Cake Wallet တွင်, သင်နှင့်အတူမျိုးစေ့ကိုမျှဝေရန်ရှိပြီးသားပိုက်ဆံအိတ်ကိုရွေးချယ်ခြင်းအားဖြင့်ပိုက်ဆံအိတ်အုပ်စုတစ်ခုဖန်တီးနိုင်သည်။ ပိုက်ဆံအိတ်အုပ်စုတစ်ခုစီတွင်ငွေကြေးအမျိုးအစားတစ်ခုစီ၏ပိုက်ဆံအိတ်တစ်ခုစီပါ 0 င်နိုင်သည်။ သို့မဟုတ်လုံးဝအသစ်သောမျိုးစေ့နှင့်အတူပိုက်ဆံအိတ်ဖန်တီးရန်အစေ့အသစ်ဖန်တီးပါ။",
   "wallet_group_description_existing_seed": "ဒီပိုက်ဆံအိတ်အတွက်ရှိပြီးသားမျိုးစေ့ကိုသုံးဖို့သင်ရွေးချယ်ခဲ့တယ်။ သင်ကအတည်ပြုရန်သို့မဟုတ်ရေးရန်လိုအပ်လျှင်မျိုးစေ့ကိုထပ်မံအတည်ပြုနိုင်သည်။",
   "wallet_group_description_four": "လုံးဝအသစ်သောမျိုးစေ့နှင့်အတူပိုက်ဆံအိတ်ဖန်တီးရန်။",
   "wallet_group_description_one": "ကိတ်မုန့်၌, သင်တစ် ဦး ဖန်တီးနိုင်ပါတယ်",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "သင်သည်ဤမျိုးစေ့ကိုနောက်တဖန်ရှုမြင်နိုင်သည်",
   "wallet_group_empty_state_text_one": "သင့်တွင်သဟဇာတဖြစ်သောပိုက်ဆံအိတ်အုပ်စုများမရှိပါ။ !\n\n ကိုအသာပုတ်ပါ",
   "wallet_group_empty_state_text_two": "အသစ်တစ်ခုကိုတစ်ခုလုပ်ဖို့အောက်တွင်ဖော်ပြထားသော။",
+  "wallet_group_name": "ပိုက်ဆံအိတ်အုပ်စုအမည်",
   "wallet_has_passphrase": "ဒီပိုက်ဆံအိတ်က passphrase ရှိတယ်",
   "wallet_keys": "ပိုက်ဆံအိတ် အစေ့/သော့များ",
   "wallet_list_create_new_wallet": "Wallet အသစ်ဖန်တီးပါ။",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Monero ပိုက်ဆံအိတ်",
   "walletConnect": "Wallet ချိတ်ဆက်မှု",
   "wallets": "ပိုက်ဆံအိတ်",
+  "want_to_create_more_wallets": "ဒီပိုက်ဆံအိတ်အုပ်စုအတွက်ပိုက်ဆံအိတ်တွေပိုဖန်တီးချင်ပါသလား။ အောက်တွင်ဖော်ပြထားသောဤသို့ပြုရန် (သို့မဟုတ်သို့မဟုတ်ပိုက်ဆံအိတ်စာမျက်နှာများတွင်အချိန်မရွေး)",
   "warning": "သတိပေးချက်",
   "website": "ဝဘ်0င်းက္ပုဒ်စာတမ်း",
   "welcome": "ဝမ်းသာစွာနှုတ်ဆက်ခြင်း",
   "welcome_subtitle_new_wallet": "လတ်ဆတ်စွာစတင်လိုပါကအောက်ကပိုက်ဆံအိတ်အသစ်ကိုဖန်တီးပါ။",
   "welcome_subtitle_restore_wallet": "အကယ်. သင့်တွင်သင်ကိတ်မုန့်ထဲသို့ယူဆောင်လိုသောလက်ရှိပိုက်ဆံအိတ်ရှိပါက Restore Lestore Wallet ကိုရွေးပါ။",
   "welcome_to_cakepay": "Cake Pay မှကြိုဆိုပါသည်။",
+  "What_is_a_wallet_group": "ပိုက်ဆံအိတ်အုပ်စုဆိုတာဘာလဲ။",
   "what_is_payjoin": "Payjoin ဆိုတာဘာလဲ ?(",
   "what_is_silent_payments": "အသံတိတ်ငွေပေးချေမှုဆိုတာဘာလဲ",
   "widgets_address": "လိပ်စာ",
