--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -548,6 +548,7 @@
   "new_template": "Nieuwe sjabloon",
   "new_transactions_notifications": "Stuur meldingen over nieuwe transacties",
   "new_wallet": "Nieuwe portemonnee",
+  "new_wallet_group": "Nieuwe portemonneegroep",
   "newConnection": "Nieuwe verbinding",
   "no_cards_found": "Geen kaarten gevonden",
   "no_extra_detail": "Geen extra details beschikbaar",
@@ -794,6 +795,7 @@
   "select_a_wallet": "Selecteer een portemonnee",
   "select_backup_file": "Selecteer een back-upbestand",
   "select_buy_provider_notice": "Selecteer hierboven een koopprovider. U kunt dit scherm overslaan door uw standaard kopenprovider in te stellen in app -instellingen.",
+  "select_currency": "Selecteer Valuta",
   "select_destination": "Selecteer de bestemming voor het back-upbestand.",
   "select_hw_account_below": "Selecteer welk account u hieronder moet herstellen:",
   "select_manufacturer_title": "Selecteer fabrikant",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "Stille betalingen scannen",
   "silent_payments_settings": "Stille betalingsinstellingen",
   "single_seed_wallets_group": "Enkele zaadportefeuilles",
+  "skip": "Overslaan",
   "slidable": "Verschuifbaar",
   "solana_create_associated_token_account_exception": "Fout bij het maken van een geassocieerd tokenaccount voor ontvangingsadres.",
   "solana_invalid_data_message": "Fout bij het parseren van gekoppeld tokenaccount voor token. Bevestig het ontvangstadres en probeer het opnieuw.",
@@ -1093,6 +1096,7 @@
   "waiting_payment_confirmation": "In afwachting van betalingsbevestiging",
   "wallet": "Portemonnee",
   "wallet_group": "Portemonnee",
+  "wallet_group_description_bottom_sheet": "In Cake Wallet kun je een portemonneegroep aanmaken door een bestaande portemonnee te selecteren om een ​​zaadje mee te delen. Elke portemonneegroep kan één portemonnee van elk valutatype bevatten.\\n\\nU kunt Portefeuillegroep kiezen selecteren om het scherm met beschikbare portemonnees en/of portemonneegroepen te zien. Of kies Nieuw zaad maken om een ​​portemonnee met een geheel nieuw zaadje te maken.",
   "wallet_group_description_existing_seed": "U hebt ervoor gekozen om een ​​bestaand zaadje voor deze portemonnee te gebruiken. U kunt het zaad opnieuw verifiëren als u het moet bevestigen of opschrijven.",
   "wallet_group_description_four": "om een ​​portemonnee te maken met een geheel nieuw zaadje.",
   "wallet_group_description_one": "In cakeballet kun je een",
@@ -1102,6 +1106,7 @@
   "wallet_group_description_view_seed": "Je kunt dit zaad altijd opnieuw bekijken",
   "wallet_group_empty_state_text_one": "Het lijkt erop dat je geen compatibele portemonnee -groepen hebt !\n\n TAP",
   "wallet_group_empty_state_text_two": "hieronder om een ​​nieuwe te maken.",
+  "wallet_group_name": "Naam portemonneegroep",
   "wallet_has_passphrase": "Deze portemonnee heeft een wachtwoordzin",
   "wallet_keys": "Portemonnee zaad/sleutels",
   "wallet_list_create_new_wallet": "Maak een nieuwe portemonnee",
@@ -1126,12 +1131,14 @@
   "wallet_store_monero_wallet": "Monero portemonnee",
   "walletConnect": "WalletConnect",
   "wallets": "Portefeuilles",
+  "want_to_create_more_wallets": "Wilt u meer portemonnees maken voor deze portemonneegroep? U kunt dit hieronder doen (of later op de pagina Portefeuilles).",
   "warning": "Waarschuwing",
   "website": "Website",
   "welcome": "Welkom",
   "welcome_subtitle_new_wallet": "Als u opnieuw wilt beginnen, tikt u op de nieuwe portemonnee hieronder en u bent op weg naar de races.",
   "welcome_subtitle_restore_wallet": "Als je een bestaande portemonnee hebt die je in cake wilt brengen, kies dan gewoon om de bestaande portemonnee te herstellen en we zullen je door het proces leiden.",
   "welcome_to_cakepay": "Welkom bij Cake Pay!",
+  "What_is_a_wallet_group": "Wat is een portemonneegroep?",
   "what_is_payjoin": "Wat is Payjoin ?",
   "what_is_silent_payments": "Wat zijn stille betalingen?",
   "widgets_address": "Adres",
