--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -548,6 +548,7 @@
   "new_template": "Yeni Şablon",
   "new_transactions_notifications": "Yeni işlemler hakkında bildirimler gönderin",
   "new_wallet": "Yeni Cüzdan",
+  "new_wallet_group": "Yeni Cüzdan Grubu",
   "newConnection": "Yeni bağlantı",
   "no_cards_found": "Kart bulunamadı",
   "no_extra_detail": "Ekstra ayrıntı yok",
@@ -794,6 +795,7 @@
   "select_a_wallet": "Bir Cüzdan Seçin",
   "select_backup_file": "Yedek dosyası seç",
   "select_buy_provider_notice": "Yukarıda bir satın alma sağlayıcısı seçin. App ayarlarında varsayılan satın alma sağlayıcınızı ayarlayarak bu ekranı atlayabilirsiniz.",
+  "select_currency": "Para Birimi Seçin",
   "select_destination": "Lütfen yedekleme dosyası için hedef seçin.",
   "select_hw_account_below": "Lütfen aşağıda hangi hesabı geri yükleyeceğinizi seçin:",
   "select_manufacturer_title": "Üretici seçin",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "Sessiz Ödemeler Taraması",
   "silent_payments_settings": "Sessiz Ödeme Ayarları",
   "single_seed_wallets_group": "Tek tohum cüzdanları",
+  "skip": "Atlamak",
   "slidable": "kaydırılabilir",
   "solana_create_associated_token_account_exception": "ALIPITIENT ADRESİ İÇİN BAŞLANGIÇ HESABI oluşturma Hata.",
   "solana_invalid_data_message": "Belirteç için ilişkili belirteç hesabı ayrıştırılırken hata oluştu. Lütfen aldığınız adresi onaylayın ve tekrar deneyin.",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "İşlemin işlem geçmişine yansıması için lütfen birkaç saniye bekleyin",
   "wallet": "Cüzdan",
   "wallet_group": "Cüzdan grubu",
+  "wallet_group_description_bottom_sheet": "Cake Wallet'ta, bir tohumu paylaşmak için mevcut bir cüzdanı seçerek bir cüzdan grubu oluşturabilirsiniz. Her cüzdan grubu, her para birimi türünden tek bir cüzdan içerebilir.\\n\\nMevcut cüzdanları ve/veya cüzdan grupları ekranını görmek için Cüzdan Grubu Seç'i seçebilirsiniz. Veya tamamen yeni bir tohum içeren bir cüzdan oluşturmak için Yeni Tohum Oluştur'u seçin.",
   "wallet_group_description_existing_seed": "Bu cüzdan için mevcut bir tohum kullanmayı seçtiniz. Onaylamanız veya yazmanız gerekiyorsa tohumu tekrar doğrulayabilirsiniz.",
   "wallet_group_description_four": "Tamamen yeni bir tohumla bir cüzdan oluşturmak için.",
   "wallet_group_description_one": "Kek cüzdanında bir",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "Bu tohumu her zaman tekrar görebilirsiniz",
   "wallet_group_empty_state_text_one": "Herhangi bir uyumlu cüzdan grubunuz yok gibi görünüyor !\n\n TAP",
   "wallet_group_empty_state_text_two": "Yeni bir tane yapmak için aşağıda.",
+  "wallet_group_name": "Cüzdan Grubu adı",
   "wallet_has_passphrase": "Bu cüzdanın bir parola var",
   "wallet_keys": "Cüzdan tohumu/anahtarları",
   "wallet_list_create_new_wallet": "Yeni Cüzdan Oluştur",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Monero Cüzdanı",
   "walletConnect": "WalletConnect",
   "wallets": "Cüzdanlar",
+  "want_to_create_more_wallets": "Bu cüzdan grubu için daha fazla cüzdan oluşturmak ister misiniz? Bunu aşağıdan (veya daha sonra istediğiniz zaman Cüzdanlar sayfasından) yapabilirsiniz.",
   "warning": "Uyarı",
   "website": "Web sitesi",
   "welcome": "Hoş geldin",
   "welcome_subtitle_new_wallet": "Taze başlamak istiyorsanız, aşağıda yeni cüzdan oluşturun ve yarışlara gidersiniz.",
   "welcome_subtitle_restore_wallet": "Mevcut bir cüzdanınız varsa, kek içine getirmek istediğiniz, mevcut cüzdanı geri yüklemeyi seçin ve bu süreç boyunca size yol gösterelim.",
   "welcome_to_cakepay": "Cake Pay'e Hoş Geldiniz!",
+  "What_is_a_wallet_group": "Cüzdan grubu nedir?",
   "what_is_payjoin": "Payjoin nedir ?",
   "what_is_silent_payments": "Sessiz ödemeler nedir?",
   "widgets_address": "Adres",
