--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -548,6 +548,7 @@
   "new_template": "新模板",
   "new_transactions_notifications": "发送有关新交易的通知",
   "new_wallet": "新钱包",
+  "new_wallet_group": "新钱包组",
   "newConnection": "新连接",
   "no_cards_found": "找不到卡",
   "no_extra_detail": "没有其他详细信息",
@@ -794,6 +795,7 @@
   "select_a_wallet": "选择一个钱包",
   "select_backup_file": "选择备份文件",
   "select_buy_provider_notice": "在上面选择买入提供商。您可以通过在应用程序设置中设置默认的购买提供商来跳过此屏幕。",
+  "select_currency": "选择货币",
   "select_destination": "请选择备份文件的目的地。",
   "select_hw_account_below": "请在下面选择要还原的帐户：",
   "select_manufacturer_title": "选择制造商",
@@ -900,6 +902,7 @@
   "silent_payments_scanning": "无声付款扫描",
   "silent_payments_settings": "无声付款设置",
   "single_seed_wallets_group": "单个种子钱包",
+  "skip": "跳过",
   "slidable": "可滑动",
   "solana_create_associated_token_account_exception": "错误创建有关接收地址的关联令牌帐户。",
   "solana_invalid_data_message": "解析令牌的关联令牌帐户时出错。请确认接收地址并重试。",
@@ -1092,6 +1095,7 @@
   "waitFewSecondForTxUpdate": "请等待几秒钟，交易才会反映在交易历史记录中",
   "wallet": "钱包",
   "wallet_group": "钱包组",
+  "wallet_group_description_bottom_sheet": "在 Cake Wallet 中，您可以通过选择现有钱包来共享种子来创建钱包组。每个钱包组可以包含每种货币类型的一个钱包。\\n\\n您可以选择“选择钱包组”来查看可用的钱包和/或钱包组屏幕。或者选择创建新种子来创建带有全新种子的钱包。",
   "wallet_group_description_existing_seed": "您已经选择在此钱包中使用现有种子。如果需要确认或写下来，您可能会再次验证种子。",
   "wallet_group_description_four": "创建一个带有全新种子的钱包。",
   "wallet_group_description_one": "在蛋糕钱包中，您可以创建一个",
@@ -1101,6 +1105,7 @@
   "wallet_group_description_view_seed": "您可以随时再次在下面查看此种子",
   "wallet_group_empty_state_text_one": "看起来您没有任何兼容的钱包组!\n\n tap",
   "wallet_group_empty_state_text_two": "下面是一个新的。",
+  "wallet_group_name": "钱包组名称",
   "wallet_has_passphrase": "这个钱包有一个密码",
   "wallet_keys": "钱包种子/密钥",
   "wallet_list_create_new_wallet": "创建新钱包",
@@ -1125,12 +1130,14 @@
   "wallet_store_monero_wallet": "Monero 钱包",
   "walletConnect": "钱包连接",
   "wallets": "钱包",
+  "want_to_create_more_wallets": "想要为此钱包组创建更多钱包吗？请随意在下面执行此操作（或稍后在“钱包”页面中执行此操作）。",
   "warning": "警告",
   "website": "网站",
   "welcome": "欢迎",
   "welcome_subtitle_new_wallet": "如果您想开始新鲜，请点击下面的创建新钱包，您将参加比赛。",
   "welcome_subtitle_restore_wallet": "如果您有一个现有的钱包要把蛋糕带入蛋糕，只需选择还原现有的钱包，我们将带您完成整个过程。",
   "welcome_to_cakepay": "欢迎来到 Cake Pay！",
+  "What_is_a_wallet_group": "什么是钱包群？",
   "what_is_payjoin": "什么是工资join?",
   "what_is_silent_payments": "什么是无声付款？",
   "widgets_address": "地址",
