--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -548,6 +548,7 @@
   "new_template": "Новий шаблон",
   "new_transactions_notifications": "Надішліть сповіщення про нові транзакції",
   "new_wallet": "Новий гаманець",
+  "new_wallet_group": "Нова група гаманців",
   "newConnection": "Нове підключення",
   "no_cards_found": "Карт не знайдено",
   "no_extra_detail": "Немає додаткових деталей",
@@ -795,6 +796,7 @@
   "select_a_wallet": "Виберіть гаманець",
   "select_backup_file": "Виберіть файл резервної копії",
   "select_buy_provider_notice": "Виберіть постачальника купівлі вище. Ви можете пропустити цей екран, встановивши свого постачальника купівлі за замовчуванням у налаштуваннях додатків.",
+  "select_currency": "Виберіть Валюта",
   "select_destination": "Виберіть місце призначення для файлу резервної копії.",
   "select_hw_account_below": "Виберіть, який рахунок відновити нижче:",
   "select_manufacturer_title": "Виберіть виробника",
@@ -901,6 +903,7 @@
   "silent_payments_scanning": "Мовчазні платежі сканування",
   "silent_payments_settings": "Налаштування мовчазних платежів",
   "single_seed_wallets_group": "Поодинокі насінні гаманці",
+  "skip": "Пропустити",
   "slidable": "Розсувний",
   "solana_create_associated_token_account_exception": "Помилка створення пов’язаного облікового запису Token для адреси приймання.",
   "solana_invalid_data_message": "Помилка аналізу пов’язаного облікового запису маркера для маркера. Будь ласка, підтвердьте адресу отримання та повторіть спробу.",
@@ -1093,6 +1096,7 @@
   "waitFewSecondForTxUpdate": "Будь ласка, зачекайте кілька секунд, поки транзакція відобразиться в історії транзакцій",
   "wallet": "Гаманець",
   "wallet_group": "Група гаманців",
+  "wallet_group_description_bottom_sheet": "У Cake Wallet ви можете створити групу гаманців, вибравши наявний гаманець, щоб поділитися з ним зерном. Кожна група гаманців може містити окремий гаманець кожного типу валюти.\\n\\nВи можете вибрати «Вибрати групу гаманців», щоб переглянути доступні гаманці та/або екран груп гаманців. Або виберіть «Створити нове насіння», щоб створити гаманець із абсолютно новим насінням.",
   "wallet_group_description_existing_seed": "Ви вирішили використовувати існуюче насіння для цього гаманця. Ви можете ще раз перевірити насіння, якщо вам потрібно підтвердити або записати його.",
   "wallet_group_description_four": "створити гаманець з абсолютно новим насінням.",
   "wallet_group_description_one": "У гаманці тортів ви можете створити a",
@@ -1102,6 +1106,7 @@
   "wallet_group_description_view_seed": "Ви завжди можете переглянути це насіння ще раз під",
   "wallet_group_empty_state_text_one": "Схоже, у вас немає сумісних груп гаманця !\n\n Торкніться",
   "wallet_group_empty_state_text_two": "нижче, щоб зробити новий.",
+  "wallet_group_name": "Назва групи Wallet",
   "wallet_has_passphrase": "Цей гаманець має фразу",
   "wallet_keys": "Мнемонічна фраза/ключі гаманця",
   "wallet_list_create_new_wallet": "Створити новий гаманець",
@@ -1126,12 +1131,14 @@
   "wallet_store_monero_wallet": "Monero гаманець",
   "walletConnect": "WalletConnect",
   "wallets": "Гаманці",
+  "want_to_create_more_wallets": "Бажаєте створити більше гаманців для цієї групи гаманців? Ви можете зробити це нижче (або будь-коли пізніше на сторінці Гаманців).",
   "warning": "УВАГА",
   "website": "Веб -сайт",
   "welcome": "Вітати",
   "welcome_subtitle_new_wallet": "Якщо ви хочете почати спочатку, торкніться Створити новий гаманець нижче, і ви будете поза конкуренціею.",
   "welcome_subtitle_restore_wallet": "Якщо у вас є існуючий гаманець, який ви хочете ввести в торт, просто виберіть Відновити існуючий гаманець, і ми проведемо вас через процес.",
   "welcome_to_cakepay": "Ласкаво просимо до Cake Pay!",
+  "What_is_a_wallet_group": "Що таке група гаманців?",
   "what_is_payjoin": "Що таке Payjoin ?",
   "what_is_silent_payments": "Що таке мовчазні платежі?",
   "widgets_address": "Адреса",
